[package]
name = "prompter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vt100 = { git = "https://github.com/ayourtch/vt100-rust.git" }
ptyprocess = "*"
nix = { version = "*", features = ["poll"]}
pancurses = "*"
